[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["kimfi <my_mail@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
